fix: prevent page horizontal overflow on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@ body {
   font-size: 18px;
   line-height: 1.8;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar       { width: 4px; }
